<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/rel_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarheight"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:tint="@color/white" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/ib_back"
            android:fontFamily="@font/kamerik"
            android:text="@string/txt_add_location"
            android:textColor="#ffffff"
            android:textSize="@dimen/_14sdp"
            tools:ignore="SpUsage" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rel_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_title"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:helperText="Ej: Av. 29 de mayo y Tsáchila">

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="true"
            android:fontFamily="@font/louisgeorgecafe"
            android:hint="@string/txt_address1"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="@dimen/_12sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rel_flat_apartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/rel_address"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/flat_apartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/txt_flat_apartment"
            android:fontFamily="@font/louisgeorgecafe"
            android:textSize="@dimen/_12sdp"
            android:clickable="false"
            android:inputType="text"
            android:focusable="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rel_delivery_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_flat_apartment"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:helperText="Ej: Casa amarilla y puerta café">

        <EditText
            android:id="@+id/delivery_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="true"
            android:fontFamily="@font/louisgeorgecafe"
            android:hint="@string/txt_delivery_note"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="@dimen/_12sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rel_alias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_delivery_note"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:helperText="Ej: Casa">

        <EditText
            android:id="@+id/alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="true"
            android:fontFamily="@font/louisgeorgecafe"
            android:hint="@string/txt_alias"
            android:inputType="text"
            android:maxLength="30"
            android:singleLine="true"
            android:textSize="@dimen/_12sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerCountries"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/rel_alias"
        android:layout_centerHorizontal="true"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        android:fontFamily="@font/kamerik"
        android:textSize="24dp"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerCountries"
        android:orientation="horizontal"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rel_prefix"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:focusable="false">

            <EditText
                android:id="@+id/editTextPrefijo"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:focusable="false"
                android:hint=""
                android:inputType="text"
                android:textAlignment="viewStart"
                android:textColor="#000"
                android:textSize="@dimen/_12sdp"
                android:singleLine="true"
                android:fontFamily="@font/kamerik"
                android:clickable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rel_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true">

            <EditText
                android:id="@+id/editTextNumero"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:hint="@string/txt_phone_number"
                android:focusable="true"
                android:inputType="phone"
                android:digits="0123456789"
                android:maxLength="10"
                android:textAlignment="viewStart"
                android:textColor="#000"
                android:textSize="@dimen/_11sdp"
                android:singleLine="true"
                android:fontFamily="@font/kamerik"
                android:clickable="false" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rel_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerCountries"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/louisgeorgecafe"
            android:text="Si no te encontramos en el teléfono de tu cuenta, te contactaremos a este número."
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_10sdp"
            tools:ignore="SpUsage" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_bottom"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <Button
            android:id="@+id/btn_keep"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/checkout_btn"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/kamerik"
            android:text="@string/txt_keep"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            tools:ignore="SpUsage" />

    </RelativeLayout>
</RelativeLayout>
