<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fooddelivery.PlaceOrder">

    <RelativeLayout
        android:id="@+id/rel_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarheight"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:tint="@color/white" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/ib_back"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/toolbartitle"
            tools:ignore="SpUsage"
            android:text="@string/delivery_information"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rel_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rel_title"
        android:layout_marginBottom="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/txt_address_input"
            android:layout_margin="10dp">

            <fragment
                android:id="@+id/mapFragment"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                class="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_address_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txt_notes_input"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:focusable="false"
            android:hint="@string/txt_select_address"
            android:maxLines="2"
            android:textSize="18dp"
            tools:ignore="SpUsage">

            <EditText
                android:id="@+id/edt_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_box_underline_selector"
                android:inputType="textPostalAddress"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="#000"
                android:textSize="@dimen/medium"
                tools:ignore="SpUsage" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_notes_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rel_bottom"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="20dp"
            android:focusable="false"
            android:hint="@string/txt_notes"
            android:maxLines="2"
            android:textSize="18dp"
            tools:ignore="SpUsage">

            <EditText
                android:id="@+id/edt_note"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_box_underline_selector"
                android:inputType="textEmailAddress"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="#000"
                android:textSize="@dimen/medium"
                tools:ignore="SpUsage" />
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:id="@+id/rel_bottom"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_placeorder"
                style="@style/Widget.AppCompat.Button"
                android:backgroundTint="@color/colorPrimary"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/checkout_btn"
                android:text="@string/txt_place_order"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/medium"
                tools:ignore="SpUsage" />

        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>
