<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rel_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarheight"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:tint="@color/white" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/ib_back"
            android:text="@string/txt_myprofile"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/toolbartitle"
            tools:ignore="SpUsage" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_image"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/rel_title">

        <ImageView
            android:id="@+id/img12"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:scaleType="fitXY" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:background="#ff9e00" />

        <faster.com.ec.utils.RoundedImageView
            android:id="@+id/img_user"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/default_circle_img" />


    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/rel_image"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/hint_full_name"
            android:fontFamily="@font/kamerik"
            android:textSize="@dimen/_12sdp"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/input_layout_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/txt_phone_number_2"
            android:fontFamily="@font/kamerik"
            android:textSize="@dimen/_12sdp"
            android:clickable="false"
            android:inputType="text"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--<com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/input_layout_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/input_cedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/txt_cedula"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>-->
</RelativeLayout>
